--- a/src/ui/style_MainPage.css
+++ b/src/ui/style_MainPage.css
@@ -1,10 +1,10 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+/* MainPage */
 #inputZone{
 	-fx-font-size:15px;
 	
 	
 }
-
 
 #bb{
 	-fx-font-size:19px;
@@ -15,3 +15,16 @@
 	-fx-font-size:30px;
 }
 
+
+#lb{
+	-fx-font-size:20px;
+}
+
+/* MenuBarInitializer  */
+#menuHeader{
+	-fx-font-size:13px;
+}
+
+#menuItem{
+	-fx-font-size:13px;
+}
