--- a/src/ui/style_MainPage.css
+++ b/src/ui/style_MainPage.css
@@ -1,10 +1,12 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 /* MainPage */
 #inputZone{
-	-fx-font-size:15px;
-	
+	-fx-font-size:18px;
+	-fx-font-weight:lighter;	
+	-fx-font-family: "Georgia";
 	
 }
+
 
 #bb{
 	-fx-font-size:18px;
