--- a/src/ui/style_MainPage.css
+++ b/src/ui/style_MainPage.css
@@ -22,8 +22,16 @@
     -fx-background-radius: 2;
     -fx-border-radius: 2;
     -fx-border-color: black;
-    
-   
+}
+
+.spell-errorClicked{
+	-fx-fill:red;
+    -fx-font-size:18px;
+	-fx-background-color: white, white;
+    -fx-background-radius: 2;
+    -fx-border-radius: 2;
+    -fx-border-color: black;
+    -fx-font-weight:bold;
 }
 
 #bb{
