--- a/src/ui/style_MainPage.css
+++ b/src/ui/style_MainPage.css
@@ -6,6 +6,9 @@
 	-fx-font-family: "Georgia";
 	
 }
+#root{
+	
+}
 #codeArea{
 	-fx-font-size:18px;
 	-fx-background-color: white, white;
@@ -39,6 +42,9 @@
 #bb{
 	-fx-font-size:18px;
 	-fx-font-weight: bold;
+	-fx-border-radius:3px;
+    -fx-border-color:black;
+    -fx-border-width: 1px;
 }
 
 #paraInfo{
